# xds-aws

./: xds-aws.cabal
src/Xds/Aws/: Config.hs  S3.hs  SNS.hs  SQS.hs  Types.hs
src/Xds/Aws/Amazonka/: SNS.hs
src/Xds/Aws/Aws/: S3.hs  SQS.hs
src/Xds/Aws/Internal/: Config.hs
