name:                xds-aws
version:             0.2.1.0
description:         AWS lib for xdataset
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Xds.Aws.Config
    Xds.Aws.S3
    Xds.Aws.SNS
    Xds.Aws.SQS
  other-modules:
    Xds.Aws.Types
    Xds.Aws.Internal.Config
    Xds.Aws.Aws.SQS
    Xds.Aws.Aws.S3
    Xds.Aws.Amazonka.SNS
    
  hs-source-dirs: src
  ghc-options:    
    -static 
    -Wall 
    -O2

  buildable: True
  build-depends:
      base
    , text
    , transformers
    , mtl >= 2.2.1
    , aeson >= 0.9.0.1 && < 0.10
    , bytestring
    , containers
    , conduit
    , http-conduit
    , conduit-extra
    , resourcet
    , http-streams
    , amazonka >= 1.3.1
    , amazonka-core >= 1.3.1
    , amazonka-sns >= 1.3.1
    , http-types
    , lens
    , aws >= 0.12.1 && < 0.13
    , monad-loops
    , errors
    , connection
    , http-client
    , exceptions
    , monad-logger
    , http-client
    , monad-control



